--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
-REACT_APP_SITE_NAME=Facit
+REACT_APP_SITE_NAME=CLAPAY
 REACT_APP_STORYBOOK_URL=https://facit-story.omtanke.studio/?path=
+REACT_APP_API_BASE_URL='http://dev-dashboard.clapay.net/api'
