--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
 		"plugin:prettier/recommended",
 		"prettier"
 	],
+  // "parser": "@babel/eslint-parser",  		// "@babel/eslint-parser": "^7.5.4",
 	"parserOptions": {
 		"ecmaFeatures": {
 			"jsx": true
@@ -49,6 +50,16 @@
 		],
 		"react/no-arrow-function-lifecycle": "off",
 		"react/no-invalid-html-attribute": "off",
-		"react/no-unused-class-component-methods": "off"
+		"react/no-unused-class-component-methods": "off",
+
+    // "react/sort-comp": 0,
+    // "react/prop-types": 0,
+    // "no-useless-escape": 1,
+    // "max-len": [1, 151],
+    // "no-unused-vars": [1],
+    // // "import/prefer-default-export": 1,
+    // "import/no-unresolved": 1,
+    // "jsx-a11y/label-has-for": 1,
+    // "jsx-a11y/anchor-is-valid": 1
 	}
 }
